add message input

--- a/frontend/styles/theme.scss
+++ b/frontend/styles/theme.scss
@@ -3,5 +3,5 @@
   --color-secondary: #ffc107;
   --color-font-primary: #eeeeee;
   --color-font-secondary: #000000;
-  --color-main-bg: #e8e8e8;
+  --color-main-bg: #eef3f3;
 };
