add messages, update message input style

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -12,6 +12,7 @@ body {
   grid-template-rows: 4rem auto;
 }
 
-.body {
-  background: var(--color-main-bg);
+.content {
+  background: var(--color-secondary-light);
+  overflow-y: hidden;
 }
