--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+sans&display=swap');
 @import "theme";
+
+* {
+  font-family: Noto Sans, sans-serif;
+};
