--- a/frontend/styles/theme.scss
+++ b/frontend/styles/theme.scss
@@ -1,7 +1,12 @@
 :root {
-  --color-primary: #163348;
-  --color-secondary: #ffc107;
+  --color-primary: #407688;
+  --color-primary-light: #c5d4d4;
+  --color-primary-dark: #163348;
+  --color-secondary: #ccd1d2;
+  --color-secondary-light: #eef3f3;
+  --color-secondary-dark: #aaaaaa;
+  --color-accent: #ff9d0c;
   --color-font-primary: #eeeeee;
-  --color-font-secondary: #000000;
-  --color-main-bg: #eef3f3;
+  --color-font-secondary: #222222;
+  --color-font-label: #444444;
 };
