add interface color selector

--- a/frontend/src/components/Chat/Message/Message.module.scss
+++ b/frontend/src/components/Chat/Message/Message.module.scss
@@ -28,6 +28,7 @@
 
 .bubble {
   background: var(--color-secondary);
+  color: var(--color-font-secondary);
   padding: 1rem;
   border-radius: 1rem;
   position: relative;
