--- a/frontend/src/components/Chat/MessageInput/MessageInput.module.scss
+++ b/frontend/src/components/Chat/MessageInput/MessageInput.module.scss
@@ -12,6 +12,8 @@
   padding: 0 1rem;
   font-size: 1rem;
   border-radius: 2rem;
+  background: var(--color-input);
+  color: var(--color-input-font);
 }
 
 .sendButton {
@@ -21,6 +23,12 @@
   border: none;
   outline: none;
   font-size: 1rem;
+  font-weight: bold;
   margin-left: 1rem;
   min-width: 6rem;
+  cursor: pointer;
+
+  &:hover {
+    background: var(--color-accent-dark);
+  }
 }
