add settings form, save settings in localStorage

--- a/frontend/src/components/Chat/MessageInput/MessageInput.module.scss
+++ b/frontend/src/components/Chat/MessageInput/MessageInput.module.scss
@@ -7,28 +7,6 @@
 
 .input {
   width: 100%;
-  border: none;
   height: 100%;
-  padding: 0 1rem;
-  font-size: 1rem;
-  border-radius: 2rem;
-  background: var(--color-input);
-  color: var(--color-input-font);
-}
-
-.sendButton {
-  background: var(--color-accent);
-  color: var(--color-font-primary);
-  border-radius: 2rem;
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  font-weight: bold;
-  margin-left: 1rem;
-  min-width: 6rem;
-  cursor: pointer;
-
-  &:hover {
-    background: var(--color-accent-dark);
-  }
+  margin-right: 1rem;
 }
