--- a/frontend/styles/theme.scss
+++ b/frontend/styles/theme.scss
@@ -12,6 +12,7 @@
   --color-font-label: #444444;
   --color-input: #f2f2f2;
   --color-input-font: #222222;
+  --color-button-primary: #577b88;
 };
 
 [data-theme="dark"] {
@@ -28,4 +29,5 @@
   --color-font-label: #cbcbcb;
   --color-input: #788e96;
   --color-input-font: #f2f2f2;
+  --color-button-primary: #577b88;
 }
