--- a/frontend/src/components/Chat/MessageInput/MessageInput.module.scss
+++ b/frontend/src/components/Chat/MessageInput/MessageInput.module.scss
@@ -3,6 +3,9 @@
   background: var(--color-primary-light);
   padding: 1rem 2rem;
   display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .input {
