--- a/frontend/src/components/Chat/Message/Message.module.scss
+++ b/frontend/src/components/Chat/Message/Message.module.scss
@@ -26,7 +26,7 @@
   margin-right: 8px;
 }
 
-.bubble {
+.bubble, .bubble a {
   background: var(--color-secondary);
   color: var(--color-font-secondary);
   padding: 1rem;
