--- a/frontend/src/components/Chat/Message/Message.module.scss
+++ b/frontend/src/components/Chat/Message/Message.module.scss
@@ -26,13 +26,21 @@
   margin-right: 8px;
 }
 
-.bubble, .bubble a {
+%bubbleText {
+
+}
+
+.bubble {
   background: var(--color-secondary);
   color: var(--color-font-secondary);
   padding: 1rem;
   border-radius: 1rem;
   position: relative;
   width: 100%;
+
+  a {
+    color: var(--color-font-secondary);
+  }
 
   &:before {
     content: '';
@@ -57,5 +65,31 @@
       border-width: 0 0 20px 20px;
       border-color: transparent transparent var(--color-primary) transparent;
     }
+
+    a {
+      color: var(--color-font-primary);
+    }
+  }
+}
+
+.videoWrapper {
+  max-width: 23em;
+}
+
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  max-width: 100%;
+  overflow: hidden;
+  margin-top: 1em;
+
+  // youtube video
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
