--- a/frontend/src/components/UI/Navbar/Navbar.module.scss
+++ b/frontend/src/components/UI/Navbar/Navbar.module.scss
@@ -15,7 +15,7 @@
   cursor: pointer;
   height: 100%;
   min-width: 6rem;
-  padding: 0 1rem;
+  padding: 0 2rem;
   position: relative; // for the absolute badge
 }
 
@@ -24,20 +24,20 @@
 }
 
 .blink {
-  animation: blinker 1s linear infinite;
+  animation: blinker 1.3s linear infinite;
 }
 
 @keyframes blinker {
   50% {
-    opacity: 0;
+    background: var(--color-primary);
   }
 }
 
 .badge {
   position: absolute;
   top: 0.3rem;
-  right: 0.1rem;
-  background: #577b88;
+  right: 0.4rem;
+  background: var(--color-button-primary);
   border-radius: 2rem;
   border: 1px solid white;
   width: 1.3rem;
