--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -4,4 +4,16 @@
 * {
   outline: 0;
   font-family: Noto Sans, sans-serif;
+  box-sizing: border-box;
 };
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
