--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 @import "theme";
 
 * {
   outline: 0;
-  font-family: Noto Sans, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   box-sizing: border-box;
 };
 
